--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_CANDY_MACHINE_ID=6QYu1Tz288UKAcufa4zvVqbgS3ZZqgoQSBCz8SDGc4eB
+REACT_APP_CANDY_MACHINE_ID=7roEAWLVM9A13NPHFyKFhcBpzP6fRPJJsMrN3VpiVYpg
 
 REACT_APP_SOLANA_NETWORK=mainnet-beta
-REACT_APP_SOLANA_RPC_HOST=https://ssc-dao.genesysgo.net/
+REACT_APP_SOLANA_RPC_HOST=https://wandering-dawn-frog.solana-mainnet.quiknode.pro/4d0bee6e39e34632fa8fe254083c896d05c9ca2f/
