--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_CANDY_MACHINE_ID=9YVZ6KiFMeQZ2EchZdadpZLwoSHKAK4igeYSfaq1qnCC
+REACT_APP_CANDY_MACHINE_ID=6tVjL747pS9QpucMJnamWmr2b8pRHfJPEjWNpLpGv43M
 
-REACT_APP_SOLANA_NETWORK=mainnet-beta
-REACT_APP_SOLANA_RPC_HOST=https://wandering-dawn-frog.solana-mainnet.quiknode.pro/4d0bee6e39e34632fa8fe254083c896d05c9ca2f/
+REACT_APP_SOLANA_NETWORK=devnet
+REACT_APP_SOLANA_RPC_HOST=https://psytrbhymqlkfrhudd.dev.genesysgo.net:8899/
