--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_CANDY_MACHINE_ID=6tVjL747pS9QpucMJnamWmr2b8pRHfJPEjWNpLpGv43M
-
+CI=FALSE
+FI=FALSE
 REACT_APP_SOLANA_NETWORK=devnet
 REACT_APP_SOLANA_RPC_HOST=https://psytrbhymqlkfrhudd.dev.genesysgo.net:8899/
